tests/rosetta/out/OCaml/99-bottles-of-beer.ml
(* Generated by Mochi compiler v0.10.30 on 2025-07-19T00:24:49Z *)
let rec __show v =
  let open Obj in
  let rec list_aux o =
    if is_int o && (magic (obj o) : int) = 0 then "" else
     let hd = field o 0 in
     let tl = field o 1 in
     let rest = list_aux tl in
     if rest = "" then __show (obj hd) else __show (obj hd) ^ "; " ^ rest
  in
  let r = repr v in
  if is_int r then string_of_int (magic v) else
  match tag r with
    | 0 -> if size r = 0 then "[]" else "[" ^ list_aux r ^ "]"
    | 252 -> (magic v : string)
    | 253 -> string_of_float (magic v)
    | _ -> "<value>"

exception Break
exception Continue


let rec bottles (n : int) : string =
  if (n = 0) then (
    "No more bottles"
  ) ;
  if (n = 1) then (
    "1 bottle"
  ) ;
  (__show (n) ^ " bottles")

let rec main () =
  let i : int ref = ref 99 in
  let rec __loop0 () =
    if ((!i) > 0) then (
      try
        print_endline ((bottles (!i) ^ " of beer on the wall"));
        print_endline ((bottles (!i) ^ " of beer"));
        print_endline ("Take one down, pass it around");
        print_endline ((bottles ((!i) - 1) ^ " of beer on the wall"));
        i := ((!i) - 1);
        __loop0 ()
      with Continue -> ()
    ) else ()
  in try __loop0 () with Break -> ()
  ;
  ()


let () =
  main ();
